[package]
name = "rbxgame"
version = "0.1.0"
authors = ["echnobas <60543166+echnobas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.1.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.7.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
